updated readme and code.js

--- a/templates/activities.ejs
+++ b/templates/activities.ejs
@@ -27,6 +27,9 @@
                 <%- activitiesTable %>
             </div>
 
+            <form action="/activities" method="post"> 
+                <input type="submit" class="button" name="clear" value="Clear Database">
+            </form>
             
         </fieldset>
 
