updated code.js to redirect to activities after submission

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -20,7 +20,7 @@
             <legend>Store Activity in DB</legend>
             <p>To store an activity in the database fill out the form</p>
 
-            <form action="/" method="post">
+            <form id="submitActivity" action="/" method="post">
                 <label for="name">Activity: </label> <br>
                 <input type="text" name="activity" placeholder="e.g. Reading book"><br>
 
